Updated contact form validation and UI changes

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ solutions. Have basic knowledge of Java , SQL , HTML , C ,JavaScript
       <h3>Portfolio Website</h3><br>
       <p>Personal professional portfolio built using HTML, CSS, and JavaScript.</p>
       <br>
-      <a href="#" target="_blank">Live Demo</a>
-      <a href="#" target="_blank">GitHub</a>
+      <a href="https://karthikashrees18.github.io/FUTURE_FS_01/" target="_blank">Live Demo</a>
+      <a href="https://github.com/karthikashrees18/FUTURE_FS_01" target="_blank">GitHub</a>
     </div>
     
     <div class="project-card">
@@ -80,17 +80,18 @@ solutions. Have basic knowledge of Java , SQL , HTML , C ,JavaScript
       <p>Developed a web application to predict house rent based on size,bedrooms, and distance using Linear Regression.</p>
       <p>Implemented model training,saving, and deployment with Python,Pandas,scikit-learn,and Joblib for end-to-end functionality.</p>
       <br>
-      <a href="#" target="_blank">Live Demo (Coming Soon)</a>
       <a href="https://github.com/karthikashrees18/House-Rent-Prediction" target="_blank">GitHub</a>
     </div>
     
     <div class="project-card">
-      <h3>Future Interns Task</h3><br>
-      <p>Internship task showcasing frontend and backend skills.</p>
-      <br>
-      <a href="#" target="_blank">Live Demo</a>
-      <a href="#" target="_blank">GitHub</a>
-    </div>
+  <h3>Vasavi Tiffins – South Indian Breakfast Website</h3><br>
+  <p>A responsive restaurant website built using HTML, CSS, and JavaScript.<br> Showcases a modern landing page with menu display, gift card system, and a simulated payment flow with printable voucher generation.</p>
+  <p>Features include responsive hero section, menu, about us, contact, gift card purchase options, simulated payment gateway, auto-generated voucher code, and printable voucher page.</p>
+  <br>
+  <a href="https://karthikashrees18.github.io/FUTURE_FS_03/" target="_blank">Live Demo</a> | 
+  <a href="https://github.com/karthikashrees18/FUTURE_FS_03" target="_blank">GitHub</a>
+</div>
+
   </section>
 
   <!-- Contact Section -->
